--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -15,6 +15,6 @@ import ProjectsField from './WebGL/ProjectsField.svelte';
 <Row {...props}>
   <section class="projects">
     <SectionTitle>things I made</SectionTitle>
-    <ProjectsField client:only />
+    <ProjectsField client:only="svelte" />
   </section>
 </Row>
