--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,5 @@
 ---
+/* eslint-disable max-lines */
 import CustomImage from '../components/CustomImage.astro';
 import Row from '../components/rows/Row.astro';
 import AboutLayout from '../layouts/AboutLayout.astro';
@@ -135,62 +136,6 @@ import AboutLine from '../components/AboutLine.astro';
       <p>
         <p>I am a tech leader and a maker of things.</p>
 
-        <p>
-                    I also am <br />
-                     the co-founder of <a
-            target="_blank"
-            href="https://www.moi.am">moi</a
-          >, a deep-tech startup that pioneered <a
-            target="_blank"
-            href="https://www.compositesworld.com/articles/continuous-fiber-manufacturing-cfm-with-moi-composites"
-          >robotic 3D printing</a
-          >
-                     for advanced composites<br />
-                     the creator of <a
-            target="_blank"
-            href="https://robbreport.com/motors/marine/moi-composites-3-d-printed-vessel-future-of-boat-building-1234583213/"
-          >MAMBO</a
-          >, the world's first functional 3D-printed boat<br />
-                     the research lead on the award-winning <a
-            target="_blank"
-            href="https://3dprint.com/150415/atropos-3d-printing-robotics/"
-          >Atropos</a
-          > project, among many other <a
-            target="_blank"
-            href="https://brainy-seal-8fe.notion.site/Lab-a111a9a8d61c4e3da0325de0d26c82ff"
-          >+LAB's</a
-          > activities<br />
-                     the designer of the sculptures for the <a
-            target="_blank"
-            href="https://www.archdaily.com/913934/rex-unveils-final-design-for-mirrored-necklace-residence"
-          >Necklace Residence</a
-          > and a designer of the <a
-            target="_blank"
-            href="https://www.nytimes.com/2023/09/13/arts/design/perelman-performing-arts-center-review.html"
-          >Perelman Center</a
-          ><br />
-                     a teaching assistant for the M.Arch program at the School
-                    of Architecture of Politecnico di Milano<br />
-                     and a speaker at international conferences and seminars.
-        </p>
-
-        <p>
-                    As an enthusiastic <strong>tech leader</strong> I spent the
-                    last decade turning diverse ideas into successful products.
-                    I coordinated every aspect of the process from brainstorming
-                    to R&D and GTM strategies, ensuring fruitful collaboration
-                    among cross-functional engineering, design, marketing, and
-                    sales teams.
-        </p>
-
-        <p>
-                    In addition to my professional endeavors, I actively
-                    contribute to the academic community as a <strong
-          >teaching assistant</strong
-          > at the School of Architecture of Politecnico di Milano,
-                    while also speaking at numerous international conferences
-                    and seminars.
-        </p>
       </p>
     </div>
   </Row>
@@ -214,45 +159,6 @@ import AboutLine from '../components/AboutLine.astro';
       location="New York, USA"
     />
 
-    <AboutLine
-      class="about-line"
-      title="Moi Dental"
-      description="Co-Founder, Board Member, CTO"
-      date="Jun 2020 - Feb 2024"
-      location="Milano, IT"
-    />
-
-    <AboutLine
-      class="about-line"
-      title="Moi Composites"
-      description="Co-Founder, President, CTO"
-      date="Feb 2018 - Feb 2024"
-      location="Milano, IT"
-    />
-
-    <AboutLine
-      class="about-line"
-      title="Politecnico di Milano, Materials Engineering, +LAB"
-      description="Research Scientist"
-      date="Jan 2016 - Jan 2018"
-      location="Milano, IT"
-    />
-
-    <AboutLine
-      class="about-line"
-      title="REX Architecture"
-      description="Architectural Designer"
-      date="Oct 2014 - Apr 2015"
-      location="New York, USA"
-    />
-
-    <AboutLine
-      class="about-line"
-      title="Luraschi & Partners"
-      description="Architectural Intern"
-      date="Sep 2011 - Mar 2012"
-      location="Milano, IT"
-    />
 
     <h3>Academic</h3>
 
@@ -263,27 +169,7 @@ import AboutLine from '../components/AboutLine.astro';
       date="Mar 2019 - Sep 2022"
       location="Milano, IT"
     >
-            Design and Construction Studio, Master of Architecture
-    </AboutLine>
 
-    <AboutLine
-      class="about-line"
-      title="Politecnico di Milano, School of Architecture Urban Planning Construction Engineering"
-      description="Tutor"
-      date="Oct 2018 - Nov 2018"
-    >
-            Il Prefabbricato: What if Angelo Mangiarotti had 3D printers?
-    </AboutLine>
-
-    <AboutLine
-      class="about-line"
-      title="Politecnico di Milano, School of Architecture Urban Planning Construction Engineering"
-      description="Teaching Assistant"
-      date="Oct 2016 - Oct 2017"
-    >
-            Architectural Design for Complex Constructions Studio, Master of
-            Architecture
-    </AboutLine>
 
     <h3>Publications</h3>
 
@@ -295,25 +181,6 @@ import AboutLine from '../components/AboutLine.astro';
       > Compositi Magazine n.63, p.13-16.
     </div>
 
-    <div class="about-line">
-            Natale, G., <b>Ferguson, M.</b>, Levi, M. (2020). <i
-      >Stampa 3D di prodotti on-demand.</i
-      > Progettare n.431, p.56-58.
-    </div>
-
-    <div class="about-line">
-            Levi, M., Natale, G., <b>Ferguson, M.</b> (2018). <i
-      >3D printing of Continuous Fiber Composite Materials. Redefining
-                Manufacturing: from research to market.</i
-      > Compositi Magazine n.47, p.62-66.
-    </div>
-
-    <div class="about-line">
-      <b>Ferguson, M.</b> (2016). <i
-      >Paperopoli (pp. 26-29) and Oh!Carina (pp. 114-117).</i
-      > In Make or make not. There is no try. What to print in 3D and Why.
-            Italy: Tralerighe.
-    </div>
 
     <h3>Awards</h3>
     <AboutLine
@@ -322,296 +189,15 @@ import AboutLine from '../components/AboutLine.astro';
       description="Winner of Special Innovation Award"
       date="Oct 2020"
     />
-    <AboutLine
-      class="about-line"
-      title="The Mark Challenge"
-      description="Winner of Special Award in Yachting"
-      date="Jun 2020"
-    />
-    <AboutLine
-      class="about-line"
-      title="Hello Tomorrow Top 500"
-      description="Top 500 deep-tech startups worldwide"
-      date="Mar 2019"
-    />
-    <AboutLine
-      class="about-line"
-      title="Italian National Innovation Award "
-      description="Winner"
-      date="Nov 2018"
-    />
-    <AboutLine
-      class="about-line"
-      title="ADI Compasso d'Oro"
-      description="Honorable Mention"
-      date="Jun 2018"
-    />
-    <AboutLine
-      class="about-line"
-      title="RadLaunch Innovation Acceleration Prize "
-      description="Winner"
-      date="May 2018"
-    />
-    <AboutLine
-      class="about-line"
-      title="James Dyson Award"
-      description="International runner-up"
-      date="Sep 2017"
-    />
-    <AboutLine
-      class="about-line"
-      title="JEC’s Innovation Award"
-      description="Winner"
-      date="Mar 2017"
-    />
-    <AboutLine
-      class="about-line"
-      title="ACMA’s Awards for Composites Excellence"
-      description="Finalist"
-      date="Sep 2016"
-    />
-    <AboutLine
-      class="about-line"
-      title="Premio Mantero"
-      description="Faculty Nominee for best M.Arch thesis"
-      date="Dec 2015"
-    />
+
 
     <h3>Exhibitions</h3>
-    <AboutLine
-      class="about-line"
-      title="Lineapelle"
-      description="The value of technology in manufacturing, D-House"
-      date="Milano IT, Sep 2022"
-    />
-    <AboutLine
-      class="about-line"
-      title="Genova International Boat Show"
-      description="World Premiere of MAMBO boat"
-      date="Genova IT, Oct 2020"
-    />
-    <AboutLine
-      class="about-line"
-      title="Formnext 2019"
-      description="Presentation of MAMBO project, Autodesk"
-      date="Frankfurt DE, Nov 2018"
-    />
-    <AboutLine
-      class="about-line"
-      title="Triennale di Milano"
-      description="Cicatrici"
-      date="Milano IT, Oct 2018"
-    />
-    <AboutLine
-      class="about-line"
-      title="RAPID + TCT 2018"
-      description="Wire Frame, Structurally Optimized BMX, Autodesk"
-      date="Fort Worth US, Apr 2018"
-    />
-    <AboutLine
-      class="about-line"
-      title="Formnext 2017"
-      description="Wire Frame, Structurally Optimized BMX, Autodesk"
-      date="Frankfurt DE, Nov 2018"
-    />
     <AboutLine
       class="about-line"
       title="MakerFaire 2016"
       description="ENI Solar Park"
       date="Rome IT, Oct 2016"
     />
-    <AboutLine
-      class="about-line"
-      title="Comic Book Museum"
-      description="Uncle Scrooge and the Secrets of the Money Bin"
-      date="Milano IT, Jun 2015"
-    />
 
-    <h3>Patents</h3>
-    <AboutLine
-      class="about-line"
-      title="WO2024224229A1"
-      description="Equipment and Process for the Three-Dimensional Printing of Composite Materials"
-      date="Oct 2024"
-      url="https://worldwide.espacenet.com/patent/search?q=pn%3DWO2024224229A1"
-    />
-    <AboutLine
-      class="about-line"
-      title="WO2024079597A1"
-      description="Method for Three-Dimensional Printing of Fiber Composite Materials"
-      date="Apr 2024"
-      url="https://worldwide.espacenet.com/patent/search?q=pn%3DWO2024079597A1"
-    />
-    <AboutLine
-      class="about-line"
-      title="WO2021111287A1"
-      description="Process for Making a Reinforcing Structure for Dental Prostheses in Continuous Fiber Composite Materials"
-      date="Dec 2019"
-      url="https://worldwide.espacenet.com/patent/search?q=pn%3DWO2021111287A1"
-    />
-    <AboutLine
-      class="about-line"
-      title="WO2021038503A1"
-      description="Equipment and Method for the Three-Dimensional Printing of Continuous Fiber Composite Materials"
-      date="Aug 2019"
-      url="https://worldwide.espacenet.com/patent/search?q=pn%3DWO2021038503A1"
-    />
-    <AboutLine
-      class="about-line"
-      title="WO2020245774A1"
-      description="Method and Apparatus for the Construction of Three-Dimensional Fibre-Reinforced Structures"
-      date="Jun 2019"
-      url="https://worldwide.espacenet.com/patent/search?q=pn%3DWO2020245774A1"
-    />
-
-    <h3>Seminars</h3>
-    <AboutLine
-      class="about-line"
-      title="AZL, Excellence in Lightweight Production"
-      description="Composites Made Easy"
-      date="Feb 2021"
-    />
-    <AboutLine
-      class="about-line"
-      title="NTT DATA Technology Foresight"
-      description="moi: redefine manufacturing"
-      date="Milano IT, Jul 2019"
-    />
-    <AboutLine
-      class="about-line"
-      title="JEC World"
-      description="CFM fiber optimization for 3D printed light-weight structural parts"
-      date="Paris FR, Mar 2019"
-    />
-    <AboutLine
-      class="about-line"
-      title="Final Seminar of BioCity Research Programme "
-      description="Stress based 3D printing with continuous fiber composites"
-      date="Turku FI, May 2018"
-    />
-    <AboutLine
-      class="about-line"
-      title="RadTech Technology Expo and Conference"
-      description="Smart Composites for Additive Manufacturing"
-      date="Chicago US, May 2018"
-    />
-    <AboutLine
-      class="about-line"
-      title="A&T Automation and Testing"
-      description="Redefine Manufacturing, from research to market"
-      date="Torino IT, Apr 2018"
-    />
-    <AboutLine
-      class="about-line"
-      title="Manifattura Milano Camp"
-      description="3D Print: High Performances with Advance Composites"
-      date="Milano IT, Mar 2018"
-    />
-    <AboutLine
-      class="about-line"
-      title="International CAE Conference"
-      description="Teaching becomes fun: experiencing the Uncle Scrooge Money Bin re-design"
-      date="Verona IT, Oct 2015"
-    />
-
-    <h3>Media and Press</h3>
-    <AboutLine
-      class="about-line"
-      date="Nov 2022"
-      title="Boat International n.437"
-      description="Print my Yacht!"
-      url="https://www.boatinternational.com/yachts/yacht-design/is-3d-printing-the-future-of-yacht-design"
-    />
-    <AboutLine
-      class="about-line"
-      date="Jan 2022"
-      title="JEC Composites Magazine n.144"
-      description="Hi-Fiber makes the perfect smile"
-      url="https://www.jeccomposites.com/news/hi-fibers-3d-print-dental-reinforcements/"
-    />
-    <AboutLine
-      class="about-line"
-      date="May 2021"
-      title="Composites World"
-      description="MAMBO tests the waters for 3D printing large marine structures"
-      url="https://www.compositesworld.com/articles/mambo-tests-the-waters-for-3d-printing-large-marine-structures#:~:text=Initial%20sea%20trials%20and%20stability,toward%20certification%20of%20the%20boat."
-    />
-    <AboutLine
-      class="about-line"
-      date="May 2021"
-      title="Composites World"
-      description="3D-printed continuous fiber dental reinforcements enter clinical trial"
-      url="https://www.compositesworld.com/news/3d-printed-continuous-fiber-dental-reinforcements-enter-clinical-trial"
-    />
-    <AboutLine
-      class="about-line"
-      date="Mar 2021"
-      title="Tech Toys"
-      description="Season 7 Episode 2 Print and Go"
-      url="https://www.imdb.com/title/tt18372156/"
-    />
-    <AboutLine
-      class="about-line"
-      date="Oct 2020"
-      title="Robb Report"
-      description="The World’s First 3-D-Printed Fiber-Glass Powerboat Will Debut at the Genova Boat Show"
-      url="https://robbreport.com/motors/marine/moi-composite-mambo-3d-printed-powerboat-makes-its-debut-at-genoa-boat-show-1234572372/"
-    />
-    <AboutLine
-      class="about-line"
-      date="Oct 2020"
-      title="Business Insider"
-      description="An Italian company created the world's first 3D-printed fiberglass boat"
-      url="https://www.businessinsider.com/mambo-worlds-first-3d-printed-fiberglass-boat-2020-10?r=US&IR=T"
-    />
-    <AboutLine
-      class="about-line"
-      date="Sep 2020"
-      title="DesignBoom"
-      description="World's First 3D-Printed Fiberglass Boat Debuts At Genova Boat Show"
-      url="https://www.designboom.com/technology/moi-mambo-3d-printed-fiberglass-boat-genoa-boat-show-09-30-2020/"
-    />
-    <AboutLine
-      class="about-line"
-      date="Sep 2020"
-      title="3D Natives"
-      description="The 3D printed fiberglass boat, MAMBO, finally takes to the open sea"
-      url="https://www.3dnatives.com/en/3d-printed-fiberglass-boat-mambo-300920205/"
-    />
-    <AboutLine
-      class="about-line"
-      date="May 2019"
-      title="3D Natives"
-      description="moi: redefining manufacturing by 3D printing composites"
-      url="https://www.3dnatives.com/en/moi-composites-290520195/"
-    />
-    <AboutLine
-      class="about-line"
-      date="Sep 2018"
-      title="3D Printing Industry"
-      description="Q&A: Steve Ferguson Co-Founder of moi"
-      url="https://3dprintingindustry.com/news/qa-Steve-Ferguson-co-founder-of-moi-composites-140154/"
-    />
-    <AboutLine
-      class="about-line"
-      date="Jun 2018"
-      title="3D Print.com"
-      description="Composites Startup Introduces Continuous Fiber Manufacturing Technology for 3D Printing High Performance Parts"
-      url="https://3dprint.com/215683/moi-composites-cfm-technology/"
-    />
-    <AboutLine
-      class="about-line"
-      date="Sep 2017"
-      title="James Dyson Award"
-      description="Atropos"
-      url="https://www.archdaily.com/867696/atropos-this-6-axis-robot-arm-can-3d-print-fiberglass-composites"
-    />
-    <AboutLine
-      class="about-line"
-      date="Sep 2016"
-      title="3D Print.com"
-      description="Thermosetting Composite Materials: Atropos Creates New Relationship Between 3D Printing & Robotics"
-      url="https://3dprint.com/150415/atropos-3d-printing-robotics/"
-    />
   </div>
 </AboutLayout>
