--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -56,7 +56,7 @@ const props = Astro.props;
 </style>
 
 <Row class="hero-row" {...props}>
-  <Sprites client:only />
+  <Sprites client:only="svelte" />
 
   <div class="hero-container">
     <div class="line" style={{ animationDelay: '0.4s' }}>
