--- a/src/components/text/Highlight.astro
+++ b/src/components/text/Highlight.astro
@@ -12,6 +12,6 @@ const { class: cls, ...props } = Astro.props;
     }
 </style>
 
-<span class:list={["highlight", cls]} , {...props}>
-    <slot />
+<span class:list={['highlight', cls]} {...props}>
+  <slot />
 </span>
