--- a/src/components/text/SectionTitle.astro
+++ b/src/components/text/SectionTitle.astro
@@ -1,12 +1,12 @@
 ---
-import type { HTMLAttributes } from "astro/types";
+import type { HTMLAttributes } from 'astro/types';
 
-interface Props extends HTMLAttributes<"div"> {
+interface Props extends HTMLAttributes<'div'> {
     rotate?: boolean;
 }
 
 const { class: cls, rotate = true, ...props } = Astro.props;
-const angle = rotate ? "90deg" : "0deg";
+const angle = rotate ? '90deg' : '0deg';
 ---
 
 <style define:vars={{ angle }}>
@@ -73,9 +73,9 @@ const angle = rotate ? "90deg" : "0deg";
 </style>
 
 <div class={cls}>
-    <div class="section-title-wrapper">
-        <span class="section-title" , {...props}>
-            <slot />
-        </span>
-    </div>
+  <div class="section-title-wrapper">
+    <span class="section-title" {...props}>
+      <slot />
+    </span>
+  </div>
 </div>
