--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,9 @@
 ---
+/* eslint-disable max-len */
 import MainLayout from '../layouts/MainLayout.astro';
 import Hero from '../components/Hero.astro';
 // import Projects from "../components/Projects.astro";
-import ProjectsField from '../components/WebGL/ProjectsField.svelte';
+// import ProjectsField from '../components/WebGL/ProjectsField.svelte';
 import CenteredText from '../components/rows/CenteredText.astro';
 import Highlight from '../components/text/Highlight.astro';
 import Projects from '../components/Projects.astro';
