--- a/src/pages/projects/people-management.astro
+++ b/src/pages/projects/people-management.astro
@@ -1,4 +1,5 @@
 ---
+/* eslint-disable max-len */
 import { getEntry } from 'astro:content';
 import ProjectHero from '../../components/ProjectHero.astro';
 import ProjectLayout from '../../layouts/ProjectLayout.astro';
