FIx the ABout Page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -125,7 +125,7 @@ import AboutLine from '../components/AboutLine.astro';
   <Row class="row">
     <div class="col col1 crooked">
       <CustomImage
-        src="/assets/Steve-Ferguson-portrait.jpg"
+        src="/assets/MeandBoysGolfing.jpeg"
         alt="Steve Ferguson portrait picture"
         width={1200}
         height={1500}
@@ -145,18 +145,41 @@ import AboutLine from '../components/AboutLine.astro';
 
     <AboutLine
       class="about-line"
-      title="Dandy"
-      description="Engineering Manager"
-      date="Jan 2025"
-      location="New York, USA"
+      title="Delta Defense"
+      description="Tech Lead"
+      date="August 2021 - May 2025"
+      location="West Bend, WI"
+    />
+    <AboutLine
+      class="about-line"
+      title="Delta Defense"
+      description="Software Engineer"
+      date="April 2018 - August 2020"
+      location="West Bend, WI"
     />
 
     <AboutLine
       class="about-line"
-      title="Apropos Inc"
-      description="Founding Engineer"
-      date="Apr 2024 - Jan 2025"
-      location="New York, USA"
+      title="Marinette Marine"
+      description="Program Cost Analyst"
+      date="November 2016 - April 2018"
+      location="Marinette, WI"
+    />
+
+    <AboutLine
+      class="about-line"
+      title="Maranathat Farms"
+      description="Managed 4000 acre Rice and Soybean farm"
+      date="June 2013 - Nov 2016"
+      location="Arkadelphia, AR"
+    />
+
+    <AboutLine
+      class="about-line"
+      title="Bell Helicopter"
+      description="Earned Value Management Analyst"
+      date="June 2009 - May 2013"
+      location="Fort Worth, TX"
     />
 
 
@@ -164,22 +187,29 @@ import AboutLine from '../components/AboutLine.astro';
 
     <AboutLine
       class="about-line"
-      title="Politecnico di Milano, School of Architecture Urban Planning Construction Engineering"
-      description="Teaching Assistant"
-      date="Mar 2019 - Sep 2022"
-      location="Milano, IT"
+      title="University of North Texas"
+      description="MBA Finance"
+      date="August 2009 -> May 2011"
+      location="Denton, TX"
+    >
+    <br>
+    <AboutLine
+      class="about-line"
+      title="University of North Texas"
+      description="Master of Music - French Horn Performanace "
+      date="August 2007 -> May 2009"
+      location="Denton, TX"
+    >
+    <br>
+    <AboutLine
+      class="about-line"
+      title="University of Wisconsin - Stevens Point"
+      description="Bachelor of Music - Music Performance"
+      date="August 2003 -> May 2007"
+      location="Stevens Point, WI"
     >
 
 
-    <h3>Publications</h3>
-
-    <div class="about-line">
-            Moi Composites Team: Levi, M., Natale, G., <b>Ferguson, M.</b>
-             (2022). <i
-      >Integration of the CFM process for the construction of
-                components for the marine sector.</i
-      > Compositi Magazine n.63, p.13-16.
-    </div>
 
 
     <h3>Awards</h3>
