--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -134,9 +134,29 @@ import AboutLine from '../components/AboutLine.astro';
 
     <div class="col col2">
       <p>
-        <p>I am a tech leader and a maker of things.</p>
-
+        My career journey has been anything but traditional, shaping my ability to solve complex problems and adapt to diverse challenges. I hold a Master's in Music Performance and an MBA in Finance. I began my career in the finance department of a large aerospace and defense company, where I first started programming—writing PHP to automate tasks and eliminate wasted time. Next, I managed a 4,000-acre rice farm for four years. After that, I fully transitioned into technology, working my way up to Tech Lead in Software Engineering. This unique path has honed my leadership, strategic thinking, and technical expertise.
       </p>
+      
+      <p>
+        In my current role, I split my time between leading teams and addressing complex technical challenges. I've successfully revamped hiring processes, implemented career roadmaps, and supported team members' growth while actively participating in Scrum ceremonies like standups, sprint planning, and retrospectives.
+      </p>
+      
+      <p>
+        My day to day technical expertise includes Next, Astro, Remix. I have really enjoyed building Cloudflare Workers, and TS libraries, CI/CD pipelines, and DevOps tools like Docker and Terraform.
+      </p>
+
+      
+      <p>
+        Some of my recent projects I have enjoyed include:
+      </p>
+      
+      <ul>
+        <li>CLI - allows developers to quickly create new TS libraries, Cloudflare Workers, web components</li>
+        <li>Modernizing legacy apps to Next</li>
+        <li>CI/CD pipelines to automate coding standards</li>
+        <li>Headless woographql e-commerce site</li>
+        <li>Checkout Smoke Tests</li>
+      </ul>
     </div>
   </Row>
 
@@ -168,7 +188,7 @@ import AboutLine from '../components/AboutLine.astro';
 
     <AboutLine
       class="about-line"
-      title="Maranathat Farms"
+      title="Maranatha Farms"
       description="Managed 4000 acre Rice and Soybean farm"
       date="June 2013 - Nov 2016"
       location="Arkadelphia, AR"
@@ -207,9 +227,18 @@ import AboutLine from '../components/AboutLine.astro';
       description="Bachelor of Music - Music Performance"
       date="August 2003 -> May 2007"
       location="Stevens Point, WI"
-    >
+    ></AboutLine>
 
 
+    <h3>Publications</h3>
+
+    <div class="about-line">
+            Moi Composites Team: Levi, M., Natale, G., <b>Ferguson, M.</b>
+             (2022). <i
+      >Integration of the CFM process for the construction of
+                components for the marine sector.</i
+      > Compositi Magazine n.63, p.13-16.
+    </div>
 
 
     <h3>Awards</h3>
