--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -134,22 +134,28 @@ import AboutLine from '../components/AboutLine.astro';
 
     <div class="col col2">
       <p>
-        My career journey has been anything but traditional, shaping my ability to solve complex problems and adapt to diverse challenges. I hold a Master's in Music Performance and an MBA in Finance. I began my career in the finance department of a large aerospace and defense company, where I first started programming—writing PHP to automate tasks and eliminate wasted time. Next, I managed a 4,000-acre rice farm for four years. After that, I fully transitioned into technology, working my way up to Tech Lead in Software Engineering. This unique path has honed my leadership, strategic thinking, and technical expertise.
-      </p>
-      
-      <p>
-        In my current role, I split my time between leading teams and addressing complex technical challenges. I've successfully revamped hiring processes, implemented career roadmaps, and supported team members' growth while actively participating in Scrum ceremonies like standups, sprint planning, and retrospectives.
-      </p>
-      
-      <p>
-        My day to day technical expertise includes Next, Astro, Remix. I have really enjoyed building Cloudflare Workers, and TS libraries, CI/CD pipelines, and DevOps tools like Docker and Terraform.
+        My career journey has been anything but traditional, shaping my ability to solve complex problems and adapt to diverse challenges.
+        I hold a Master's in Music Performance and an MBA in Finance. I began my career in the finance department of a large aerospace and defense company,
+        where I first started programming—writing PHP to automate tasks and eliminate wasted time. Next, I managed a 4,000-acre rice farm for four years.
+        After that, I fully transitioned into technology, working my way up to Tech Lead in Software Engineering.
+        This unique path has honed my leadership, strategic thinking, and technical expertise.
       </p>
 
-      
+      <p>
+        In my current role, I split my time between leading teams and addressing complex technical challenges.
+        I've successfully revamped hiring processes, implemented career roadmaps, and supported team members' growth
+        while actively participating in Scrum ceremonies like standups, sprint planning, and retrospectives.
+      </p>
+
+      <p>
+        My day to day technical expertise includes Next, Astro, Laravel, Wordpress. I have really enjoyed building Cloudflare Workers, and TS libraries, CI/CD pipelines, and DevOps tools like Docker and Terraform.
+      </p>
+
+
       <p>
         Some of my recent projects I have enjoyed include:
       </p>
-      
+
       <ul>
         <li>CLI - allows developers to quickly create new TS libraries, Cloudflare Workers, web components</li>
         <li>Modernizing legacy apps to Next</li>
@@ -202,6 +208,14 @@ import AboutLine from '../components/AboutLine.astro';
       location="Fort Worth, TX"
     />
 
+    <AboutLine
+      class="about-line"
+      title="McKinney Independant School District"
+      description="French Horn Teacher"
+      date="September 2007 - May 2010"
+      location="McKinney, TX"
+    />
+
 
     <h3>Academic</h3>
 
@@ -211,52 +225,39 @@ import AboutLine from '../components/AboutLine.astro';
       description="MBA Finance"
       date="August 2009 -> May 2011"
       location="Denton, TX"
-    >
-    <br>
+    />
     <AboutLine
       class="about-line"
       title="University of North Texas"
       description="Master of Music - French Horn Performanace "
       date="August 2007 -> May 2009"
       location="Denton, TX"
-    >
-    <br>
+    />
     <AboutLine
       class="about-line"
       title="University of Wisconsin - Stevens Point"
       description="Bachelor of Music - Music Performance"
       date="August 2003 -> May 2007"
       location="Stevens Point, WI"
-    ></AboutLine>
+    />
 
-
-    <h3>Publications</h3>
-
-    <div class="about-line">
-            Moi Composites Team: Levi, M., Natale, G., <b>Ferguson, M.</b>
-             (2022). <i
-      >Integration of the CFM process for the construction of
-                components for the marine sector.</i
-      > Compositi Magazine n.63, p.13-16.
-    </div>
-
-
+<!--
     <h3>Awards</h3>
     <AboutLine
       class="about-line"
       title="SN Genova Design Innovation Award"
       description="Winner of Special Innovation Award"
       date="Oct 2020"
-    />
+    /> -->
 
-
+<!--
     <h3>Exhibitions</h3>
     <AboutLine
       class="about-line"
       title="MakerFaire 2016"
       description="ENI Solar Park"
       date="Rome IT, Oct 2016"
-    />
+    /> -->
 
   </div>
 </AboutLayout>
