--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -70,14 +70,14 @@ const props = Astro.props;
     <div class="line" style={{ animationDelay: '0.6s' }}>
       <span class="light" style={{ paddingLeft: '29px' }}>a</span><span
         style={{ paddingLeft: '25px' }}
-      >devoted <Highlight>maker</Highlight></span
+      >Devoted <Highlight>Learner</Highlight></span
       >
     </div>
 
     <div class="line" style={{ animationDelay: '0.8s' }}>
             &<span class="light" style={{ paddingLeft: '10px' }}>an</span><span
         style={{ paddingLeft: '10px' }}
-      >enthusiastic <Highlight>tech leader</Highlight></span
+      >Enthusiastic <Highlight>Tech Leader</Highlight></span
       >
     </div>
   </div>
