--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -21,4 +21,6 @@ import Button from './Button.astro';
   <Button class="btn" href="/#projects">projects</Button>
      //
   <Button class="btn" href="/about">about</Button>
+     //
+  <Button class="btn" href="/assets/Resume 2025.pdf" download>resume</Button>
 </section>
